css/experience.css
html {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    scroll-behavior: smooth;
  }
  *, *:before, *:after {
    -webkit-box-sizing: inherit;
    -moz-box-sizing: inherit;
    box-sizing: inherit;
  }
   
  body {
    margin: 0;
    padding-top: 70px;
    background-color: #010420;
    font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif;
    color: white;
  }
  
  h2 {
    text-align: center;
    color: #7A85B1;
    font-size: 40px;
  }
  
  h3 {
    font-size: 32px;
    color: #703A8F;
    margin: 32px 0px 32px 0px;
  }

  h4 {
    font-size: 28px;
    color: #E09DF5;
    font-weight: normal;
    margin:0;
  }

  p {
      margin: 0;
  }
  
  .pink {
    color: #E09DF5;
  }

  .purple {
    color: #703A8F;
  }

  .get-in-touch {
    text-align: center;
    color: #7A85B1;
    font-size: 40px;
  }
  
  .capitalize {
    text-transform: capitalize;
  }

  .flex-row {
    display: flex;
    flex-direction: row;
    width: 100%;
  }
  
  .space-around {
    justify-content: space-around;
  }
  
  .nav {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    position: fixed;
    border-bottom: solid 1px lightgrey;
    width: 100%;
    height: 70px;
    top: 0;
    background-color: #010420;
  }
  
  .nav .logo {
    width: 20%;
    height: auto;
    margin: 10px 40px;
    background-image: url('../images/arun-logo-white.png');
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
  }
  
  .nav-bar {
    margin-right: 20px;
  }
  
  .nav a {
    display: inline-block;
    padding: 25px 40px 10px 40px;
    transition: color 0.2s;
    text-decoration: none;
    color: white;
    font-size: 18px;
  }
  
  .nav a:hover {
    color: #7A85B1;
  }
  
  .navbar-mobile-menu {
    display: none;
    font-size: 22px;
    margin-bottom: 10px;
  }
  
  .nav a:hover {
    color: #7A85B1;
  }

  .social-nav {
    display: flex;
    flex-direction: column;
    position: fixed;
    top: 50%;
    margin-left: 3%;
  }

  .social-nav a {
    text-decoration: none;
    padding: 10px;
    color: white;
    font-size: 20px;
    transform: color 0.3s;
    transform: transform 0.2s;
  }

  .social-nav a:hover {
    color: #E09DF5;
    transform: scale(1.02);
  }

  .horizontal-social-nav {
    display: none;
    flex-direction: row;
    justify-content: center;
  }
  
  .horizontal-social-nav a {
    text-decoration: none;
    padding: 10px;
    color: white;
    font-size: 20px;
    transform: color 0.3s;
    transform: transform 0.2s;
  }
  
  .horizontal-social-nav a:hover {
    color: #E09DF5;
    transform: scale(1.02);
  }
  
  header {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    width: 100%;
  }

  header img {
    border-radius: 50%;
    height: 300px;
    margin: 100px;
  }

  header h1 {
      margin: 0;
      font-size: 50px;
  }

  .title {
    display: flex;
    flex-direction: column;
    justify-content: baseline;
    width: 50%;
  }

  .resume-button {
    font-size: 22px;
    color: #E09DF5;
    width: 15%;
    border: solid 2px #E09DF5;
    padding: 10px;
    margin: 15px 0px 0px 0px;
    border-radius: 10px;
    text-decoration: none;
    transition: color 0.3s;
    transition: background 0.3s;
    display: flex;
    justify-content: center;
  }

  .resume-button:hover {
    color: white;;
    background: #E09DF5;
  }
  
  .button {
    font-size: 24px;
    color: #E09DF5;
    border: solid 2px #E09DF5;
    padding: 10px;
    margin: 30px 0px 30px 0px;;
    border-radius: 10px;
    text-decoration: none;
    transition: color 0.3s;
    transition: background 0.3s;
    display: flex;
    justify-content: center;
  }
  
  .button:hover {
    color: white;;
    background: #E09DF5;
  }

  .experience {
      display: flex;
      flex-direction: column;
      align-items: center;
      margin: 50px 0px 0px 0px;
  }

  .experience-block {
    width: 80%;
  }

  .experience-block h3 {
      margin: 10px 0px 10px 0px;
  }

  .position-title {
      display: flex;
      justify-content: space-between;
      width: 100%;
      border-bottom: solid white 0.8px;
  }

  .contact {
    display: flex;
    flex-direction: column;
    justify-content: center; 
    align-items: center;
    margin: 160px 0px 150px 0px;
  }
  
  footer {
    width: 100%;
    height: auto;
    border-top: solid 1px white;
  }
  
  footer p {
    color: #7A85B1;
    padding: 10px 0px 10px 0px;
    font-size: 14px;
    margin: 0;
    text-align: center;
  }
  
  
  /* Responsive */
/* For tablets */
@media screen and (max-width: 1024px) {
  .nav-bar a {
    font-size: 16px;
  }
  .resume-button {
    width: 28%;
  }
  .contact {
    margin: 30px 50px 100px 50px;
    text-align: center;
  }
}

@media screen and (max-width: 800px) {
  .nav-bar a {
    font-size: 14px;
    padding: 25px 20px 10px 20px;
  }
  .resume-button {
    width: 40%;
  }
  header {
    flex-direction: column;
  }
  .title {
    margin: 0px 0px 50px 0px;
    align-items: center;
    width: 70%;
  }
  
  h2 {
    margin-bottom: 0px;
  }
}

/* For mobile */
@media screen and (max-width: 600px) {
  .nav {
    display: flex;
    flex-direction: column;
    justify-content: center; 
    align-items: center;
    height:auto;
  }
  .logo {
    margin: 10px 0px 10px 0px;
  }
  .nav-bar {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-right: 0px;
  }
  .nav-bar a {
    text-align: center;
  }
  .navbar-mobile-menu {
    display: flex;
    justify-content: center;
  }
  .navbar-link-container {
    /* Hide by default on mobile */
    display: none;
  }
  .navbar-mobile-menu span {
    align-self: center;
  }
  .navbar-links {
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-color: #010420;
  }
}
  

